--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "@vue/composition-api": "^0.5.0",
+    "core-js": "^3.6.4",
+    "firebase": "^7.13.1",
+    "vue": "^2.6.11",
+    "vue-router": "^3.1.6",
+    "vuefire": "^2.2.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
